Update maven plugin versions, update JDK version and use Virtual Threads